--- a/app/src/main/res/layout/videoviewlayout.xml
+++ b/app/src/main/res/layout/videoviewlayout.xml
@@ -7,10 +7,11 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin">
 
-<com.example.c.myapplication1.MyGLSurfaceView
-    android:layout_width="300dp"
-    android:layout_height="100dp" />
 
+<com.example.c.openglxmlfour.MyGLSurfaceView
+    android:layout_width="100dp"
+    android:layout_height="100dp"
+    android:id="@+id/glsurfaceview"/>
 
 
 
